--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background: #2B7A78;
+  background: #FEFFFF;
 }
 
 .nav-wrapper {
@@ -7,7 +7,6 @@ body {
 }
 
 .intro {
-  height: 620px;
   background: #3AAFA9;
 }
 
@@ -21,7 +20,7 @@ body {
   -webkit-box-flex: 50%;
       -ms-flex: 50%;
           flex: 50%;
-  padding: 3px;
+  padding: 50px;
   float: right;
 }
 
@@ -44,7 +43,7 @@ body {
 }
 
 .intro .row img {
-  padding-top: 25%;
+  padding-top: 20%;
   width: 100%;
   height: 500px;
   max-width: 400px;
