--- a/css/style.scss
+++ b/css/style.scss
@@ -41,18 +41,25 @@ body{
   
     }
     button{
-
+      border-radius: 50px;
     }
     img{
       padding-top: 20%; 
       width: 100%;
       height: 500px;
       max-width: 400px;
-      
+      box-shadow: 10px;
     }
   }
   
 }
 .about{
+  padding: 5% 0%;
   background: $color5;
+  text-align: justify;
+}
+.experience{
+  padding: 5% 0%;
+  background: $color3;
+  text-align: justify;
 }
