--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,18 @@
 body {
-  background: #FEFFFF;
+  background: #feffff;
 }
 
 .nav-wrapper {
-  background: #1A1A1D;
+  background: #1a1a1d;
 }
 
 .intro {
-  background: #3AAFA9;
+  height: 600px;
+  background: #3aafa9;
+}
+
+.intro .container {
+  width: 80%;
 }
 
 .intro .row {
@@ -16,54 +21,53 @@ body {
   display: flex;
 }
 
-.intro .row .column {
-  -webkit-box-flex: 50%;
-      -ms-flex: 50%;
-          flex: 50%;
-  padding: 50px;
-  float: right;
-}
-
-@media screeen and (max-width: 500px) {
-  .intro .row .column {
-    width: 100%;
-  }
-}
-
 .intro .row h1 {
-  padding-top: 20%;
-  color: #17252A;
+  padding-top: 19%;
+  color: #17252a;
   font-family: sans-serif, Geneva, Tahoma;
   font-weight: bolder;
+  font-size: rem;
 }
 
 .intro .row p {
-  color: #DEF2F1;
+  color: #def2f1;
   font-family: sans-serif, Geneva, Tahoma;
+  padding-bottom: 4%;
 }
 
 .intro .row button {
+  position: relative;
   border-radius: 50px;
+}
+
+.intro .row button a {
+  color: #feffff;
 }
 
 .intro .row img {
   padding-top: 20%;
-  width: 100%;
-  height: 500px;
-  max-width: 400px;
-  -webkit-box-shadow: 10px;
-          box-shadow: 10px;
+  padding-left: 10%;
+  height: auto;
+  max-width: 550px;
 }
 
 .about {
   padding: 5% 0%;
-  background: #FEFFFF;
+  background: #feffff;
   text-align: justify;
+}
+
+.about h1 {
+  color: #17252a;
+}
+
+.about blockquote {
+  border-color: #3aafa9;
 }
 
 .experience {
   padding: 5% 0%;
-  background: #3AAFA9;
+  background: #3aafa9;
   text-align: justify;
 }
 /*# sourceMappingURL=style.css.map */
