--- a/css/style.scss
+++ b/css/style.scss
@@ -1,65 +1,68 @@
-$color1 : #17252A;
-$color2 : #2B7A78;
-$color3 : #3AAFA9;
-$color4 : #DEF2F1;
-$color5 : #FEFFFF;
+$color1: #17252a;
+$color2: #2b7a78;
+$color3: #3aafa9;
+$color4: #def2f1;
+$color5: #feffff;
 
-
-body{
-  background: $color5;  
+body {
+	background: $color5;
 }
 
-.nav-wrapper{
-  background: #1A1A1D;
+.nav-wrapper {
+	background: #1a1a1d;
 }
-.intro{
-  // height: 620px;
-  background: $color3;
-  .row{
-    display: flex;
+.intro {
+	height: 600px;
+	background: $color3;
+	.container {
+		width: 80%;
+	}
+	.row {
+		display: flex;
 
-    .column{
-      flex: 50%;
-      padding: 50px;
-      float: right;
-    }
-    @media screeen and (max-width:500px){
-      .column {
-        width: 100%;
+		h1 {
+			padding-top: 19%;
+			color: $color1;
+			font-family: sans-serif, Geneva, Tahoma;
+			font-weight: bolder;
+			font-size: rem;
+		}
+		p {
+			color: $color4;
+      font-family: sans-serif, Geneva, Tahoma;
+      padding-bottom: 4%;
+		}
+		button {
+      position: relative;
+      border-radius: 50px;
+      a{
+        color: $color5;
       }
     }
-
-    h1{
-      padding-top: 20%;
-      color: $color1;
-      font-family: sans-serif, Geneva, Tahoma;
-      font-weight: bolder;
-    }
-    p{
-      color: $color4;
-      font-family: sans-serif, Geneva, Tahoma;
-  
-    }
-    button{
-      border-radius: 50px;
-    }
     img{
-      padding-top: 20%; 
-      width: 100%;
-      height: 500px;
-      max-width: 400px;
-      box-shadow: 10px;
+      padding-top: 20%;
+      padding-left: 10%;
+      // width: auto;
+      height: auto;
+      max-width: 550px;
     }
-  }
+	}
+}
+.about {
+	padding: 5% 0%;
+	background: $color5;
+  text-align: justify;
   
+  h1{
+    color: $color1;
+    // text-decoration: underline solid;
+  }
+  blockquote{
+    border-color: $color3;
+  }
 }
-.about{
-  padding: 5% 0%;
-  background: $color5;
-  text-align: justify;
-}
-.experience{
-  padding: 5% 0%;
-  background: $color3;
-  text-align: justify;
+.experience {
+	padding: 5% 0%;
+	background: $color3;
+	text-align: justify;
 }
